--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ const ReferencesCount = displayWordCount("References_InText");
 
    // Display the total word count
     //document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
-    document.getElementById("totalWordCount").innerText = `Total word count: ${References_InText}`;
+    document.getElementById("totalWordCount").innerText = `Total word count bla: ${ReferencesCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
