--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
  ‌        <br>Alexander, E. (2025). Timing Resilience from the Ground Up. [online] Mwrf.com. Available at:<a href=https://www.mwrf.com/technologies/communications/article/55317093/microchip-technology-timing-resilience-from-the-ground-up>https://www.mwrf.com/technologies/communications/article/55317093/microchip-technology-timing-resilience-from-the-ground-up</a>
          <br>NIST’s Cesium Fountain Atomic Clocks. (2009). NIST. [online] Available at:<a href=https://www.nist.gov/pml/time-and-frequency-division/time-realization/cesium-fountain-atomic-clocks>https://www.nist.gov/pml/time-and-frequency-division/time-realization/cesium-fountain-atomic-clocks</a>
          <br>Ashby, N. (2003). Relativity in the Global Positioning System. Living Reviews in Relativity, [online] 6(1). doi:<a href=https://doi.org/10.12942/lrr-2003-1>https://doi.org/10.12942/lrr-2003-1</a>
+         <br>
          <br>All images are under creative common licence.
+         
         </p>  
 
     <!-- Last commit time display -->
@@ -358,7 +360,7 @@ const ReferencesCount = displayWordCount("References_InText");
 
    // Display the total word count
     //document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
-    document.getElementById("totalWordCount").innerText = `Total word count bla: ${ReferencesCount}`;
+    document.getElementById("totalWordCount").innerText = `Total word count bla: ${AbstractCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
