--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ const ReferencesCount = displayWordCount("References_InText");
 
    // Display the total word count
     //document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
-    document.getElementById("totalWordCount").innerText = `Total word count bla2: ${AbstractCount + ReferencesCount}`;
+    document.getElementById("totalWordCount").innerText = `Total word count bla3: ${wordslength -AbstractCount - ReferencesCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
